# douyin-mcp

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  login.py  main.py  pyproject.toml  test_tools.py
docs/: ROADMAP.md
src/: browser_search.py  client.py  config.py  cookies.py  errors.py  models.py  ocr.py  server.py
src/asr/: __init__.py  base.py  custom.py  siliconflow.py  volcengine.py
src/video/: __init__.py  audio.py  resolver.py
tests/: test_all.py  test_cookie_security.py  test_custom_provider.py  test_env_local.py  test_error_handling.py  test_login_helper.py  test_media_features.py  test_volcengine_provider.py
