[project]
name = "douyinmcp"
version = "0.3.0"
description = "抖音 MCP Server — 让 AI 助手能读懂抖音"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14",
    "httpx",
    "mini-racer>=0.12.4",
    "static-ffmpeg>=3.0",
    "qrcode>=7.0",
    "playwright>=1.58.0",
]

[project.optional-dependencies]
ocr = [
    "rapidocr-onnxruntime>=1.3.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
douyinmcp = "main:main"
